# lastify-bot

./: .gitignore  main.py  pyproject.toml
bot/: client.py  config.py
bot/client/: bot.py  context.py  setup.py
bot/core/: config.py  logging.py
bot/modules/: loader.py
cmds/: help.py
cmds/info/: ping.py  version.py
cmds/misc/: prefix.py
cmds/user/: avatar.py  userinfo.py
config/: config.example.toml  logging.py
events/: on_command_error.py  on_message.py  on_message_edit.py  on_ready.py
utils/: embeds.py  load_files.py  load_module.py  prefix.py  record.py  resolvers.py
