[tool.poetry]
name = "lastify-bot"
version = "0.1.0"
description = "A multi-purpose discord bot for interacting with Lastify services"
authors = ["Jake Mackie <jake.wmackie@gmail.com>"]
packages = [
    { include = "**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"